--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A distributed mapreduce framework for nodejs",
   "main": "index.js",
   "directories": {
-    "lib": "lib"
+    "lib": "lib",
+    "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
