--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test:w": "mocha --watch"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,8 @@
     "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.5.3",
     "sinon": "^4.0.0"
+  },
+  "dependencies": {
+    "uuid": "^3.1.0"
   }
 }
